# ELF-arm-linker

./: .gitignore  Makefile.am  README  README.md  configure.ac  configure~  test32_1.s  test32_2.s  test_output.txt
Examples_fusion/: Makefile.am  configure.ac  configure~  file1.c  file2.c  file3.c
m4/: crossarm.m4
project_folder/: ELF.h  ELFcntx.c  ELFcntx.h  Options_and_debug_example.c  elf_object.c  elf_object.h  etape1.c  etape2_elf_display_sec.c  etape3_display_section.c  etape4_display_symtab.c  etape5_display_reloc.c  etape6_usage_example.c  etape7_merge_symbols.c  etape8_merge_realocation.c  etape9_merge_result.c  main.c  mergeELF.c  mergeELF.h  printELF.c  printELF.h  readELF.c  readELF.h  realocation_merge.c  realocation_merge.h  section_index.c  section_index.h  section_merge.c  section_merge.h  section_merge_types.c  section_merge_types.h  symbol_merge.c  symbol_merge.h  symbol_merge_types.c  symbol_merge_types.h  util.h  writeELF.c  writeELF.h
project_folder/Tests/: p1.sh  p2.sh  p3.sh  p4.sh  p5.sh  p7.sh  p8.sh  p9.sh  test_common.sh
